gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/test21380.d
version https://git-lfs.github.com/spec/v1
oid sha256:5818d274f50f4df85d485fcaaf4b1d22c2ccf7c09010ffc5f5669483e816b3d2
size 1384
